@@ -3991,5 +3991,32 @@
       0
     ],
     "price": 750
+  },
+  {
+    "id": 152,
+    "atypeId": 1,
+    "description": "Grants 1 extra BP capacity.",
+    "etypeId": 9,
+    "traits": [
+      {
+        "code": 24,
+        "dataId": 0,
+        "value": 1
+      }
+    ],
+    "iconIndex": 125,
+    "name": "Dilong's Wisdom",
+    "note": "<Cannot Discard>\n<Cannot Rename>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 0
   }
 ]
