@@ -5891,9 +5891,9 @@
     "battlerName": "Dilong",
     "dropItems": [
       {
-        "dataId": 1,
-        "denominator": 1,
-        "kind": 0
+        "kind": 3,
+        "dataId": 152,
+        "denominator": 1
       },
       {
         "kind": 1,
