@@ -173,7 +173,7 @@ var $plugins =
 {"name":"KhasHintSystem","status":true,"description":"[1.0] Hint/Tutorial System","parameters":{"Font name":"Corbel","Font size":"16","Title bold":"ON","Title italic":"OFF","Message bold":"OFF","Message italic":"ON","Title color":"#ff9009","Message color":"#ffffff","Background color":"#000000","Background opacity":"70","Maximum width":"192","Margin":"4","Range":"144","Fade":"96"}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
-{"name":"Olivia_OctoBattle","status":true,"description":"<OctoBattle> for RPG Maker MV version 1.6.1.","parameters":{"":"","ATTENTION!!!":"READ THE HELP FILE","Weakness Display":"true","Weakness Element Data":"","Shown Elements":"[\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\"]","Element Icons":"[\"116\",\"96\",\"97\",\"98\",\"99\",\"100\",\"101\",\"102\",\"103\"]","Unknown Weakness Icon":"635","Weakness Window Data":"","Weakness Always Show":"true","Weakness Hide Duration":"180","Weakness Show Break Shield":"true","Weakness Stun Duration":"false","Weakness Show HP Gauge":"false","HP Gauge Minimum Width":"100","HP Gauge Padding":"25","Weakness Show Name":"true","Name Font Size":"16","50% HP Color":"14","25% HP Color":"2","Weakness Show States":"true","Small Weakness Icons":"true","Weak Icon Size":"0.6","Break Shield System":"false","Break Shield Access":"","Actor Shields":"false","Draw Menu Shields":"true","Enemy Shields":"true","Break Shield Mechanics":"","Base Shield Value":"1","Break Reduction":"1","Element Weakness Rate":"1.1","Max Break Shields":"99","Stun State ID":"4","Break Shield Visual":"","Shield Icon":"81","Stun Icon":"6","Protect Weakness Icon":"81","Reduce Animation":"2","Break Animation":"56","Icon Font Size":"22","Show Actor Shields":"true","Show Enemy Shields":"true","Boost Point System":"true","Boost Point Battle Control":"","Boost Point Boost Command":"Boost","Boost Point Boost Command Show":"true","Boost Point Unboost Command":"Unboost","Boost Point Unboost Command Show":"true","Boost Point LR Buttons":"true","Boost Point Mechanics":"","Boost Point Start Battle":"0","Boost Point Regen":"1","Boost Point Always Regen":"false","Boost Point Maximum Stored":"5","Boost Point Maximum Use":"5","Boost Point Death Removal":"true","Boost Point Death Regen":"false","Boost Point Multipliers":"","Boost Point Damage Multipliers":"[\"1.0\",\"1.3\",\"1.6\",\"1.9\",\"2.2\",\"2.5\"]","Boost Point Damage Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Repeat Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\"]","Boost Point Repeat Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Turn Multipliers":"[\"1.0\",\"1.3\",\"1.6\",\"1.9\",\"2.2\",\"2.5\"]","Boost Point Turn Addition":"[\"0\",\"1\",\"2\",\"3\",\"4\",\"5\"]","Boost Point Analyze Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\"]","Boost Point Analyze Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point BP Effect Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\"]","Boost Point BP Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Visuals":"","Boost Point Animations":"[\"12\",\"11\",\"13\",\"15\",\"14\",\"120\"]","Boost Point Show Icons":"true","Boost Point Icon Filled":"187","Boost Point Icon Empty":"184","Small Boost Icons":"true","Boost Icon Size":"0.7","Boost Point Small Text":"","Boost Point Small Text Align":"center","Weapon Swap System":"false","Weapon Swap Battle Control":"","Weapon Swap Command":"WpnSwap","Weapon Swap Show Command":"false","Weapon Swap Arrow Buttons":"true","Weapon Swap Show Arrows":"true","Weapon Swap Battle Test":"true","Weapon Swap Visual":"","Weapon Swap Battle Icons":"true","Weapon Swap Battle Action":"true","Weapon Swap Equip Core Window":"true","Weapon Swap Text Hit":"HIT","Weapon Swap Text Evasion":"EVA","Weapon Swap Text Critical":"CRI","Side Battle UI":"true","Warning Side Battle UI":"Requires YEP_BattleEngineCore","Side UI Position Sprites":"","Side Battle Position Actors":"true","Side Battle Actor X":"Graphics.boxWidth * 0.5 + 128 + index * 64","Side Battle Actor Y":"Graphics.boxHeight - 128 - (Math.max($gameParty.battleMembers().length, 4) - index - 1) * 48","Side Battle Position Enemies":"true","Side Battle Enemy X":"x","Side Battle Enemy Y":"Graphics.boxHeight - 444 - 128 + y","Side UI Status Window":"","Side Battle Ceiling Distance":"0","Side Battle Gauge Height":"6","Side Battle Gauge Width":"160","Side Battle Status Move Active":"48","Side Battle Status Move Selected":"24","Side Battle Status Move Speed":"4","Side Battle Status States Max":"6","Side Battle Status Scale":"0.6","Side Battle Status Width":"200","Side UI Window Settings":"","Side Battle Dim Help Window":"true","Side Battle Command Window Width":"160","Side Battle List Window Max":"8","Side Battle List Window Width":"360","Side Battle Command Window Scale":"0.8","Side Battle Window Masking":"false","Victory Screen UI":"false","Victory Screen Audio":"","Victory Screen Level Sound":"Skill2","Victory Screen Level Sound Volume":"90","Victory Screen Level Sound Pitch":"100","Victory Screen Level Sound Pan":"0","Victory Screen BGM":"scene_victoryaftermath","Victory Screen BGM Volume":"90","Victory Screen BGM Pitch":"100","Victory Screen BGM Pan":"0","Victory Screen Transition":"","Victory Screen Transition Power":"8","Victory Screen Hide Window Delay":"500","Victory Screen Display Delay":"1000","Victory Screen Zoom":"true","Victory Screen Zoom X":"700","Victory Screen Zoom Y":"460","Victory Screen Zoom Scale":"2.0","Victory Screen Zoom Duration":"300","Victory Screen Background":"","Victory Screen Background Dimmer Height":"0.2","Victory Screen Background Side Thickness":"96","Victory Screen Background Middle Thickness":"96","Victory Screen Background Text Items":"Items Obtained","Victory Screen Background Text Items Font Size":"36","Victory Screen Background Text Victory":"Victory!","Victory Screen Background Text Victory Font Size":"60","Victory Screen Rewards":"","Victory Screen Rewards Category Font Size":"20","Victory Screen Rewards Category Font Color":"8","Victory Screen Rewards Results Font Size":"28","Victory Screen Rewards Results Font Color":"0","Victory Screen Status Windows":"","Victory Screen Status Actor Font Size":"20","Victory Screen Status Level Font Size":"20","Victory Screen Status Level Format":"Lv.%1","Victory Screen Status JP Font Size":"16","Victory Screen Status EXP Font Size":"16","Victory Screen Status Update Duration":"180","Victory Screen Status Current EXP Font Size":"20","Victory Screen Status Current EXP Font Color":"0","Victory Screen Status Next EXP Font Size":"18","Victory Screen Status Next EXP Font Color":"8","Victory Screen Status Exp Gauge Height":"18","Victory Screen Status Exp Gauge Color 1":"30","Victory Screen Status Exp Gauge Color 2":"31","Victory Screen Status Level Up Text":"Level Up!","Victory Screen Status Level Up Font Size":"36","Victory Screen Status Level Up Color":"17","Victory Screen Continue Button":"","Victory Screen Continue Duration":"180","Victory Screen Continue Text":"\\c[27]Continue...\\c[0]","Battle Effects Pack":"true","Battle Effects Weak Popups":"true","Battle Effects Weak Popup Require Rate":"1.1","Battle Effects Weak Popup Cell X":"4","Battle Effects Weak Popup Cell Width":"3","Battle Effects Weak Popup Cell X Factor":"0.25","Battle Effects Weak Popup Cell Y Factor":"0.60","Battle Effects Weak Popup Move X Base":"-0.04","Battle Effects Weak Popup Move X Rate":"1.1","Battle Effects Weak Popup Move Y Base":"0","Battle Effects Weak Popup Move Y Rate":"0","Battle Effects Break Popups":"true","Battle Effects Break Popup Cell X":"7","Battle Effects Break Popup Cell Width":"3","Battle Effects Break Popup Cell X Factor":"0.25","Battle Effects Break Popup Cell Y Factor":"0.60","Battle Effects Break Popup Move X Base":"-0.04","Battle Effects Break Popup Move X Rate":"1.1","Battle Effects Break Popup Move Y Base":"0","Battle Effects Break Popup Move Y Rate":"0","Stacking Buff/Debuffs":"","Battle Effects Stack Buff Turns":"false","Battle Effects Max Buff Turns":"9","Battle Effects Stack Debuff Turns":"false","Battle Effects Max Debuff Turns":"9","Order Turn Battle":"true","Warning OTB":"Requires YEP_BattleEngineCore","OTB Force Battle System":"true","OTB Mechancs":"","OTB Mechanics Action Speed Convert":"true","OTB Mechanics Buff Debuff AGI Convert":"true","OTB Mechanics Added Action Times":"true","OTB Mechanics Action Time Order Randomize":"false","OTB Mechanics Enable Party Window":"false","OTB Mechanics Escape Actor Window":"true","OTB Mechanics Remove Restrict Current":"true","OTB Mechanics Remove Restrict Next":"true","OTB Mechanics Static AGI Calculation":"true","OTB Mechanics Stun Wakeup First":"true","OTB Mechanics Stun Wakeup Clamp":"true","OTB Visuals":"","OTB Sprite Background Colors":"","OTB Background Actor Color":"rgba(128, 160, 255, 0.6)","OTB Background Enemy Color":"rgba(255, 100, 80, 0.6)","OTB Turn Order Display":"","OTB Display X":"48","OTB Display Y":"18","OTB Display Help Window Move Y":"18","OTB Display Help Window Move Speed":"16","OTB Display Current Text":"CURRENT","OTB Display Current Size":"20","OTB Display Next Text":"NEXT","OTB Display Next Size":"20","OTB Sprite Properties":"","OTB Sprite Move Duration":"20","OTB Sprite Opacity Speed":"16","OTB Battle Scene Properties":"","OTB Help Window Y":"184","OTB Log Window Y":"92"}},
+{"name":"Olivia_OctoBattle","status":true,"description":"<OctoBattle> for RPG Maker MV version 1.6.1.","parameters":{"":"","ATTENTION!!!":"READ THE HELP FILE","Weakness Display":"true","Weakness Element Data":"","Shown Elements":"[\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\"]","Element Icons":"[\"116\",\"96\",\"97\",\"98\",\"99\",\"100\",\"101\",\"102\",\"103\"]","Unknown Weakness Icon":"635","Weakness Window Data":"","Weakness Always Show":"true","Weakness Hide Duration":"180","Weakness Show Break Shield":"true","Weakness Stun Duration":"false","Weakness Show HP Gauge":"false","HP Gauge Minimum Width":"100","HP Gauge Padding":"25","Weakness Show Name":"true","Name Font Size":"16","50% HP Color":"14","25% HP Color":"2","Weakness Show States":"true","Small Weakness Icons":"true","Weak Icon Size":"0.6","Break Shield System":"false","Break Shield Access":"","Actor Shields":"false","Draw Menu Shields":"true","Enemy Shields":"true","Break Shield Mechanics":"","Base Shield Value":"1","Break Reduction":"1","Element Weakness Rate":"1.1","Max Break Shields":"99","Stun State ID":"4","Break Shield Visual":"","Shield Icon":"81","Stun Icon":"6","Protect Weakness Icon":"81","Reduce Animation":"2","Break Animation":"56","Icon Font Size":"22","Show Actor Shields":"true","Show Enemy Shields":"true","Boost Point System":"true","Boost Point Battle Control":"","Boost Point Boost Command":"Boost","Boost Point Boost Command Show":"true","Boost Point Unboost Command":"Unboost","Boost Point Unboost Command Show":"true","Boost Point LR Buttons":"true","Boost Point Mechanics":"","Boost Point Start Battle":"0","Boost Point Regen":"1","Boost Point Always Regen":"false","Boost Point Maximum Stored":"5","Boost Point Maximum Use":"6","Boost Point Death Removal":"true","Boost Point Death Regen":"false","Boost Point Multipliers":"","Boost Point Damage Multipliers":"[\"1.0\",\"1.3\",\"1.6\",\"1.9\",\"2.2\",\"2.5\",\"2.8\"]","Boost Point Damage Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Repeat Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\",\"7.0\"]","Boost Point Repeat Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Turn Multipliers":"[\"1.0\",\"1.3\",\"1.6\",\"1.9\",\"2.2\",\"2.5\",\"2.8\"]","Boost Point Turn Addition":"[\"0\",\"1\",\"2\",\"3\",\"4\",\"5\"]","Boost Point Analyze Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\",\"7.0\"]","Boost Point Analyze Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point BP Effect Multipliers":"[\"1.0\",\"2.0\",\"3.0\",\"4.0\",\"5.0\",\"6.0\",\"7.0\"]","Boost Point BP Addition":"[\"0\",\"0\",\"0\",\"0\",\"0\",\"0\"]","Boost Point Visuals":"","Boost Point Animations":"[\"12\",\"11\",\"13\",\"15\",\"14\",\"120\",\"215\"]","Boost Point Show Icons":"true","Boost Point Icon Filled":"187","Boost Point Icon Empty":"184","Small Boost Icons":"true","Boost Icon Size":"0.7","Boost Point Small Text":"","Boost Point Small Text Align":"center","Weapon Swap System":"false","Weapon Swap Battle Control":"","Weapon Swap Command":"WpnSwap","Weapon Swap Show Command":"false","Weapon Swap Arrow Buttons":"true","Weapon Swap Show Arrows":"true","Weapon Swap Battle Test":"true","Weapon Swap Visual":"","Weapon Swap Battle Icons":"true","Weapon Swap Battle Action":"true","Weapon Swap Equip Core Window":"true","Weapon Swap Text Hit":"HIT","Weapon Swap Text Evasion":"EVA","Weapon Swap Text Critical":"CRI","Side Battle UI":"true","Warning Side Battle UI":"Requires YEP_BattleEngineCore","Side UI Position Sprites":"","Side Battle Position Actors":"true","Side Battle Actor X":"Graphics.boxWidth * 0.5 + 128 + index * 64","Side Battle Actor Y":"Graphics.boxHeight - 128 - (Math.max($gameParty.battleMembers().length, 4) - index - 1) * 48","Side Battle Position Enemies":"true","Side Battle Enemy X":"x","Side Battle Enemy Y":"Graphics.boxHeight - 444 - 128 + y","Side UI Status Window":"","Side Battle Ceiling Distance":"0","Side Battle Gauge Height":"6","Side Battle Gauge Width":"160","Side Battle Status Move Active":"48","Side Battle Status Move Selected":"24","Side Battle Status Move Speed":"4","Side Battle Status States Max":"6","Side Battle Status Scale":"0.6","Side Battle Status Width":"200","Side UI Window Settings":"","Side Battle Dim Help Window":"true","Side Battle Command Window Width":"160","Side Battle List Window Max":"8","Side Battle List Window Width":"360","Side Battle Command Window Scale":"0.8","Side Battle Window Masking":"false","Victory Screen UI":"false","Victory Screen Audio":"","Victory Screen Level Sound":"Skill2","Victory Screen Level Sound Volume":"90","Victory Screen Level Sound Pitch":"100","Victory Screen Level Sound Pan":"0","Victory Screen BGM":"scene_victoryaftermath","Victory Screen BGM Volume":"90","Victory Screen BGM Pitch":"100","Victory Screen BGM Pan":"0","Victory Screen Transition":"","Victory Screen Transition Power":"8","Victory Screen Hide Window Delay":"500","Victory Screen Display Delay":"1000","Victory Screen Zoom":"true","Victory Screen Zoom X":"700","Victory Screen Zoom Y":"460","Victory Screen Zoom Scale":"2.0","Victory Screen Zoom Duration":"300","Victory Screen Background":"","Victory Screen Background Dimmer Height":"0.2","Victory Screen Background Side Thickness":"96","Victory Screen Background Middle Thickness":"96","Victory Screen Background Text Items":"Items Obtained","Victory Screen Background Text Items Font Size":"36","Victory Screen Background Text Victory":"Victory!","Victory Screen Background Text Victory Font Size":"60","Victory Screen Rewards":"","Victory Screen Rewards Category Font Size":"20","Victory Screen Rewards Category Font Color":"8","Victory Screen Rewards Results Font Size":"28","Victory Screen Rewards Results Font Color":"0","Victory Screen Status Windows":"","Victory Screen Status Actor Font Size":"20","Victory Screen Status Level Font Size":"20","Victory Screen Status Level Format":"Lv.%1","Victory Screen Status JP Font Size":"16","Victory Screen Status EXP Font Size":"16","Victory Screen Status Update Duration":"180","Victory Screen Status Current EXP Font Size":"20","Victory Screen Status Current EXP Font Color":"0","Victory Screen Status Next EXP Font Size":"18","Victory Screen Status Next EXP Font Color":"8","Victory Screen Status Exp Gauge Height":"18","Victory Screen Status Exp Gauge Color 1":"30","Victory Screen Status Exp Gauge Color 2":"31","Victory Screen Status Level Up Text":"Level Up!","Victory Screen Status Level Up Font Size":"36","Victory Screen Status Level Up Color":"17","Victory Screen Continue Button":"","Victory Screen Continue Duration":"180","Victory Screen Continue Text":"\\c[27]Continue...\\c[0]","Battle Effects Pack":"true","Battle Effects Weak Popups":"true","Battle Effects Weak Popup Require Rate":"1.1","Battle Effects Weak Popup Cell X":"4","Battle Effects Weak Popup Cell Width":"3","Battle Effects Weak Popup Cell X Factor":"0.25","Battle Effects Weak Popup Cell Y Factor":"0.60","Battle Effects Weak Popup Move X Base":"-0.04","Battle Effects Weak Popup Move X Rate":"1.1","Battle Effects Weak Popup Move Y Base":"0","Battle Effects Weak Popup Move Y Rate":"0","Battle Effects Break Popups":"true","Battle Effects Break Popup Cell X":"7","Battle Effects Break Popup Cell Width":"3","Battle Effects Break Popup Cell X Factor":"0.25","Battle Effects Break Popup Cell Y Factor":"0.60","Battle Effects Break Popup Move X Base":"-0.04","Battle Effects Break Popup Move X Rate":"1.1","Battle Effects Break Popup Move Y Base":"0","Battle Effects Break Popup Move Y Rate":"0","Stacking Buff/Debuffs":"","Battle Effects Stack Buff Turns":"false","Battle Effects Max Buff Turns":"9","Battle Effects Stack Debuff Turns":"false","Battle Effects Max Debuff Turns":"9","Order Turn Battle":"true","Warning OTB":"Requires YEP_BattleEngineCore","OTB Force Battle System":"true","OTB Mechancs":"","OTB Mechanics Action Speed Convert":"true","OTB Mechanics Buff Debuff AGI Convert":"true","OTB Mechanics Added Action Times":"true","OTB Mechanics Action Time Order Randomize":"false","OTB Mechanics Enable Party Window":"false","OTB Mechanics Escape Actor Window":"true","OTB Mechanics Remove Restrict Current":"true","OTB Mechanics Remove Restrict Next":"true","OTB Mechanics Static AGI Calculation":"true","OTB Mechanics Stun Wakeup First":"true","OTB Mechanics Stun Wakeup Clamp":"true","OTB Visuals":"","OTB Sprite Background Colors":"","OTB Background Actor Color":"rgba(128, 160, 255, 0.6)","OTB Background Enemy Color":"rgba(255, 100, 80, 0.6)","OTB Turn Order Display":"","OTB Display X":"48","OTB Display Y":"18","OTB Display Help Window Move Y":"18","OTB Display Help Window Move Speed":"16","OTB Display Current Text":"CURRENT","OTB Display Current Size":"20","OTB Display Next Text":"NEXT","OTB Display Next Size":"20","OTB Sprite Properties":"","OTB Sprite Move Duration":"20","OTB Sprite Opacity Speed":"16","OTB Battle Scene Properties":"","OTB Help Window Y":"184","OTB Log Window Y":"92"}},
 {"name":"Olivia_OTB_Customize","status":true,"description":"Customize the OTB Turn Order Display","parameters":{"":"","ATTENTION!!!":"READ THE HELP FILE"}},
 {"name":"Olivia_BattleEffects2","status":true,"description":"<BattleEffects2> for RPG Maker MV version 1.6.1.","parameters":{"":"","ATTENTION!!!":"READ THE HELP FILE","Critical Popup":"true","CriticalFlashFull":"255","CriticalFlashHalf":"128","CriticalFlashAlpha":"80","Rolling Damage":"true","RollingDamageDuration":"15","TP Overheal Maximum":"200"}},
 {"name":"Olivia_StateTooltipDisplay","status":true,"description":"<Olivia_StateTooltipDisplay> for RPG Maker MV version 1.6.1.","parameters":{"":"","ATTENTION!!!":"READ THE HELP FILE","Tooltip Window":"","WindowScale":"0.6","WindowSkin":"Window","SkinOpacity":"240","TextFormat":"\"\\\\c[27]%1%2:\\\\c[0] %3 %4\"","BuffFormat":"\"\\\\c[27]%1%2 Up:\\\\c[0] Increases unit's %2 to %3% %4\"","DebuffFormat":"\"\\\\c[27]%1%2 Down:\\\\c[0] Decreases unit's %2 to %3% %4\"","DurationFormat":"\"\\\\c[27](Remaining Turns: %1)\\\\c[0]\"","Enabled Windows":"","Window_Help":"true","Window_SkillStatus":"true","Window_BattleSideStates":"true","Window_BattleStatus":"true"}},
