@@ -75,7 +75,7 @@ Additions:
    > Old Key
    > Andrew's Ancient Crystal of The Trail's Amazing History
    > [REDACTED TROPHY]
- - Added 58 new equipment items:
+ - Added 59 new equipment items:
   ~ 10 weapons:
    > Unstoppable Force
    > Steel Greatsword
@@ -136,6 +136,8 @@ Additions:
    > Orb of Wrath
    > Orb of Protection
    > Wyvern's Fury (Tome)
+  ~ 1 power:
+   > [REDACTED]
   ~ 5 vanities:
    > Bandito Outfit
    > Cavalier Outfit
